# mldataforge

./: .gitignore  README.md  pyproject.toml
benchmark/: benchmark_jinx_lazy_none_iterate.py  benchmark_jinx_lazy_none_shuffle.py  benchmark_jinx_lazy_none_sort.py  benchmark_jinx_standard_none_base64_iterate.py  benchmark_jinx_standard_none_base64_shuffle.py  benchmark_jinx_standard_none_base64_sort.py  benchmark_jinx_standard_none_iterate.py  benchmark_jinx_standard_none_shuffle.py  benchmark_jinx_standard_none_sort.py  benchmark_json_none_iterate.py  benchmark_mds_bulk_none_iterate.py  benchmark_mds_bulk_none_shuffle.py  benchmark_mds_ram_none_iterate.py  benchmark_mds_ram_none_shuffle.py  benchmark_mds_ram_none_sort.py  benchmark_mds_streaming_none_iterate.py  benchmark_mds_streaming_none_shuffle.py  benchmark_mds_streaming_none_sort.py  benchmark_msgpack_none_iterate.py  benchmark_msgpack_none_sort.py  benchmark_parquet_datasets_none_shuffle.py  benchmark_parquet_datasets_none_sort.py  benchmark_parquet_none_iterate.py  benchmark_parquet_none_shuffle.py  benchmark_parquet_none_sort.py  monitor.sh  utils.py
mldataforge/: __main__.py  brotli.py  compression.py  encoding.py  indexing.py  jinx.py  lazy_dict.py  mds.py  options.py  pigz.py  pipelining.py  snappy.py  trafos.py  utils.py
mldataforge/commands/: __init__.py  index.py  join.py  pipeline.py  split.py
mldataforge/commands/convert/: __init__.py  jinx.py  jsonl.py  mds.py  msgpack.py  parquet.py
mldataforge/commands/convert/jsonl/: __init__.py  mds.py  parquet.py
mldataforge/commands/convert/mds/: __init__.py  jsonl.py  parquet.py
mldataforge/commands/convert/parquet/: __init__.py  jsonl.py  mds.py
mldataforge/commands/export/: __init__.py  jinx.py
mldataforge/jinx/: __init__.py  dataset_reader.py  dataset_writer.py  lazy_dict.py  mmap_shard_reader.py  mmap_shard_writer.py  shard_reader.py  shard_writer.py
test/: conftest.py  test.parquet  test.sh  test.yaml  test_cli.py  test_compressions.py  test_encoding.py  test_indexing.py  test_lazy.py  test_pipelining.py  test_trafos.py  test_types.py  trafo_tokenize.py
