[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mldataforge"
version = "0.6.4"
authors = [
  { name = "Peter Schneider-Kamp" }
]

description = "swiss army knife of scripts for transforming and processing datasets for machine learning."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'click',
    'datasets',
    'isal',
    'lz4',
    'mosaicml-streaming',
    'msgpack',
    'orjson',
    'python-snappy',
    'zstandard'
]

[project.optional-dependencies]
test = ["pytest", "pytest-dependency", "transformers"]
dev = ["build", "twine"]
all = ["build", "twine", "pytest", "pytest-dependency", "transformers"]

[project.urls]
"Homepage" = "https://github.com/schneiderkamplab/mldataforge"
"Bug Tracker" = "https://github.com/schneiderkamplab/mldataforge/issues"

[tool.hatch.build]
include = [
    'mldataforge',
    'LICENSE',
    'README.md',
]
